--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@prisma/client": "^6.10.1",
     "@vercel/blob": "^1.1.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
